rule-of-three: Work around implicitly deleted copy-ctor/assign

When a class has a const member there won't be compiler generated
copy members. The corresponding method decls are nullptr, so we can't
call isDeleted() on it. Couldn't find proper API to check this, so
check if the class has a const field.

BUG: 403193